--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -220,7 +220,7 @@ a {
 
 a:hover {
   border-bottom-color: transparent;
-  color: #002b36 !important;
+  color: #4e5c68 !important;
 }
 
 strong,
@@ -1887,7 +1887,7 @@ header h6 + p {
 }
 
 header.major h2 {
-  color: #002b36;
+  color: #4e5c68;
   font-size: 3.5em;
 }
 
@@ -1950,7 +1950,7 @@ input[type="password"]:focus,
 input[type="email"]:focus,
 select:focus,
 textarea:focus {
-  border-color: #002b36;
+  border-color: #4e5c68;
 }
 
 select {
@@ -2055,7 +2055,7 @@ input[type="radio"]:checked + label:before {
 
 input[type="checkbox"]:focus + label:before,
 input[type="radio"]:focus + label:before {
-  border-color: #002b36;
+  border-color: #4e5c68;
 }
 
 input[type="checkbox"] + label:before {
@@ -2502,7 +2502,7 @@ ul.feature-icons li:before {
 }
 
 ul.feature-icons li:before {
-  background: #002b36;
+  background: #4e5c68;
   border-radius: 100%;
   color: #ffffff;
   display: block;
@@ -2726,7 +2726,7 @@ input[type="submit"].primary,
 input[type="reset"].primary,
 input[type="button"].primary,
 .button.primary {
-  background-color: #002b36;
+  background-color: #4e5c68;
   color: #ffffff !important;
 }
 
@@ -2809,7 +2809,7 @@ input[type="button"]:disabled,
   -webkit-justify-content: space-between;
   -ms-justify-content: space-between;
   justify-content: space-between;
-  background: #002b36;
+  background: #4e5c68;
   color: #eadfd8;
   height: 100%;
   overflow-y: auto;
@@ -2927,7 +2927,7 @@ input[type="button"]:disabled,
 
 #header > nav ul li a.active {
   background: #fff;
-  color: #002b36 !important;
+  color: #4e5c68 !important;
 }
 
 #header > nav ul li:first-child {
@@ -3202,7 +3202,7 @@ input[type="button"]:disabled,
   }
 
   #titleBar .toggle:before {
-    background: #002b36;
+    background: #4e5c68;
     color: #ffffff;
     content: "\f0c9";
     display: block;
