--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -173,7 +173,7 @@ html {
 }
 
 body {
-  background: #fff;
+  background: #002b36;
 }
 
 body.is-preload *,
@@ -318,7 +318,7 @@ blockquote {
 code {
   background: #555;
   border-radius: 5px;
-  color: #fff;
+  color: #002b36;
   font-family: "Source Code Pro", monospace;
   font-size: 0.9em;
   margin: 0 0.25em;
@@ -1965,7 +1965,7 @@ select {
 
 select option {
   color: #777;
-  background: #fff;
+  background: #002b36;
 }
 
 select:focus::-ms-value {
@@ -2754,7 +2754,7 @@ input[type="button"]:disabled,
 .button:disabled {
   background-color: #888 !important;
   box-shadow: inset 0 -0.15em 0 0 rgba(0, 0, 0, 0.15);
-  color: #fff !important;
+  color: #002b36 !important;
   cursor: default;
   opacity: 0.25;
 }
@@ -2926,7 +2926,7 @@ input[type="button"]:disabled,
 }
 
 #header > nav ul li a.active {
-  background: #fff;
+  background: #002b36;
   color: #4e5c68 !important;
 }
 
@@ -2937,7 +2937,7 @@ input[type="button"]:disabled,
 /* Wrapper */
 
 #wrapper {
-  background: #fff;
+  background: #002b36;
   padding-right: 23em;
 }
 
@@ -3157,12 +3157,12 @@ input[type="button"]:disabled,
     width: 100%;
     z-index: 10001;
     background: #222;
-    color: #fff;
+    color: #002b36;
     min-width: 320px;
   }
 
   #titleBar .title {
-    color: #fff;
+    color: #002b36;
     display: block;
     font-weight: 700;
     height: 44px;
