--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -213,7 +213,7 @@ a {
   transition:
     color 0.2s ease-in-out,
     border-color 0.2s ease-in-out;
-  border-bottom: solid 1px #e4e4e4;
+  border-bottom: solid 1px #002b36;
   color: inherit;
   text-decoration: none;
 }
@@ -300,7 +300,7 @@ sup {
 
 hr {
   border: 0;
-  border-bottom: solid 2px #f4f4f4;
+  border-bottom: solid 2px #002b36;
   margin: 2.25em 0;
 }
 
