--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2870,7 +2870,7 @@ input[type="button"]:disabled,
 }
 
 #header > header p {
-  color: #eadfd8;
+  color: #259590;
   font-style: italic;
   margin: 1em 0 0 0;
 }
