changer les couleurs des icones jeux

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2504,7 +2504,7 @@ ul.feature-icons li:before {
 ul.feature-icons li:before {
   background: #4e5c68;
   border-radius: 100%;
-  color: #002b36;
+  color: #d33682;
   display: block;
   height: 2.5em;
   left: 0;
