changement du bg des icones de jeux

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2502,7 +2502,7 @@ ul.feature-icons li:before {
 }
 
 ul.feature-icons li:before {
-  background: #4e5c68;
+  background: #002b36;
   border-radius: 100%;
   color: #d33682;
   display: block;
