--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2571,11 +2571,11 @@ table th {
 }
 
 table thead {
-  border-bottom: solid 4px #e4e4e4;
+  border-bottom: solid 4px #002b36;
 }
 
 table tfoot {
-  border-top: solid 4px #e4e4e4;
+  border-top: solid 4px #002b36;
 }
 
 table.alt {
@@ -2583,7 +2583,7 @@ table.alt {
 }
 
 table.alt tbody tr td {
-  border: solid 2px #e4e4e4;
+  border: solid 2px #002b36;
   border-left-width: 0;
   border-top-width: 0;
 }
