--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -309,7 +309,7 @@ hr.major {
 }
 
 blockquote {
-  border-left: solid 8px #e4e4e4;
+  border-left: solid 8px #002b36;
   font-style: italic;
   margin: 0 0 2.25em 0;
   padding: 0.5em 0 0.5em 2em;
@@ -2030,9 +2030,9 @@ input[type="radio"] + label:before {
 
 input[type="checkbox"] + label:before,
 input[type="radio"] + label:before {
-  background: #fafafa;
+  background: #002b36;
   border-radius: 5px;
-  border: solid 2px #e4e4e4;
+  border: solid 2px #002b36;
   content: "";
   display: inline-block;
   font-size: 0.8em;
@@ -2094,7 +2094,7 @@ input[type="radio"] + label:before {
 
 .box {
   border-radius: 5px;
-  border: solid 2px #e4e4e4;
+  border: solid 2px #002b36;
   margin-bottom: 2.25em;
   padding: 1.5em;
 }
@@ -2338,7 +2338,7 @@ ul.alt {
 }
 
 ul.alt li {
-  border-top: solid 2px #f4f4f4;
+  border-top: solid 2px #002b36;
   padding: 0.5em 0;
 }
 
@@ -2549,13 +2549,13 @@ table {
 }
 
 table tbody tr {
-  border: solid 2px #f4f4f4;
+  border: solid 2px #002b36;
   border-left: 0;
   border-right: 0;
 }
 
 table tbody tr:nth-child(2n + 1) {
-  background-color: #fafafa;
+  background-color: #002b36;
 }
 
 table td {
@@ -2696,7 +2696,7 @@ input[type="reset"].alt,
 input[type="button"].alt,
 .button.alt {
   background-color: transparent;
-  box-shadow: inset 0 0 0 2px #e4e4e4;
+  box-shadow: inset 0 0 0 2px #002b36;
   color: #777 !important;
 }
 
@@ -2704,7 +2704,7 @@ input[type="submit"].alt:hover,
 input[type="reset"].alt:hover,
 input[type="button"].alt:hover,
 .button.alt:hover {
-  background-color: #f4f4f4;
+  background-color: #002b36;
   color: #777 !important;
 }
 
@@ -2762,7 +2762,7 @@ input[type="button"]:disabled,
 /* Features */
 
 .features article {
-  border-top: solid 3px #f4f4f4;
+  border-top: solid 3px #002b36;
   margin-bottom: 2.25em;
   padding-top: 2.25em;
 }
@@ -2944,7 +2944,7 @@ input[type="button"]:disabled,
 /* Main */
 
 #main > section {
-  border-top: solid 6px #f4f4f4;
+  border-top: solid 6px #002b36;
 }
 
 #main > section > .container {
@@ -2958,7 +2958,7 @@ input[type="button"]:disabled,
 /* Footer */
 
 #footer {
-  background: #fafafa;
+  background: #002b36;
   border-top: 0;
   color: #c0c0c0;
   overflow: hidden;
