changer la couleur de WB en dessous de profilpic

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2847,7 +2847,7 @@ input[type="button"]:disabled,
 }
 
 #header a:hover {
-  color: #002b36 !important;
+  color: #0462c8 !important;
 }
 
 #header > header {
