retirer les bordures dans onglet

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2908,7 +2908,7 @@ input[type="button"]:disabled,
 }
 
 #header > nav ul li {
-  border-top: solid 2px #002b36;
+  border-top: solid 2px #4e5c68;
   display: block;
   padding: 0;
 }
