--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2835,7 +2835,7 @@ input[type="button"]:disabled,
 #header h4 a,
 #header h5 a,
 #header h6 a {
-  color: #0462c8;
+  color: ##b58900;
 }
 
 #header header p {
