changement de la police pour celle de RStudio

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -194,7 +194,7 @@ input,
 select,
 textarea {
   color: #888;
-  font-family: "Lato", sans-serif;
+  font-family: "DejaVu Sans Mono", monospace;
   font-size: 16pt;
   font-weight: 400;
   line-height: 1.75em;
