changement couleur police

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,7 +193,7 @@ body,
 input,
 select,
 textarea {
-  color: #888;
+  color: #93a189;
   font-family: "DejaVu Sans Mono", monospace;
   font-size: 16pt;
   font-weight: 400;
