--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2809,7 +2809,7 @@ input[type="button"]:disabled,
   -webkit-justify-content: space-between;
   -ms-justify-content: space-between;
   justify-content: space-between;
-  background: #d33682;
+  background: #4e5c68;
   color: #eadfd8;
   height: 100%;
   overflow-y: auto;
