--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2727,7 +2727,7 @@ input[type="reset"].primary,
 input[type="button"].primary,
 .button.primary {
   background-color: #4e5c68;
-  color: #002b36 !important;
+  color: #d33682 !important;
 }
 
 input[type="submit"].primary:hover,
